--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "babel-plugin-module-resolver": "^5.0.0",
         "customize-cra": "^1.0.0",
         "react-app-rewired": "^2.2.1",
-        "sass": "^1.63.3"
+        "sass": "^1.63.3",
+        "autoprefixer": "^9.0.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
