--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
         "yup": "^1.2.0"
     },
     "devDependencies": {
+        "autoprefixer": "^9.0.0",
         "babel-plugin-module-resolver": "^5.0.0",
         "customize-cra": "^1.0.0",
         "react-app-rewired": "^2.2.1",
-        "sass": "^1.63.3",
-        "autoprefixer": "^9.0.0"
+        "sass": "^1.63.3"
     },
     "scripts": {
         "start": "react-app-rewired start",
