--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "moment": "^2.29.4",
         "normalize.css": "^8.0.1",
         "persist": "^0.2.7",
+        "postcss": "^8.4.27",
         "postcss-loader": "^3.0.0",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.4",
